feat: Enhance tests with observability support and security context setup for contribution handling